phone too big fix

--- a/style.css
+++ b/style.css
@@ -30,9 +30,8 @@
 }
 
 #portfolioIcon {
-    width: 134px;
-    height: 53px;
-}
+  width: 134px;
+  height: 53px;
 }
 
 #call {
